<resources>

    <string name="app_name">MovieCatalog</string>

    <!-- BottomNavigationMenu -->
    <string name="option_favorites">Lista de favoritos</string>
    <string name="option_home">Inicio</string>

    <!-- HomeFragment -->
    <string name="text_subtitle_home">Populares</string>
    <string name="text_title_home">La Movieteca</string>

    <!-- MovieDetailsFragment -->
    <string name="title_movie_details">Título de película</string>
    <string name="text_movie_grade_info">Media: %1$s ( %2$s )</string>
    <string name="text_dummy_grade">Media: 4.8 (14.8k)</string>
    <string name="text_subtitle_overview">Sinópsis:</string>
    <string name="text_language_en">Inglés</string>
    <string name="text_language_es">Español</string>
    <string name="text_language_fr">Francés</string>
    <string name="text_language_ja">Japonés</string>
    <string name="text_language_other">Desconocido</string>
    <string name="text_subtitle_language">Idioma:</string>
    <string name="text_dummy_language">en-US</string>

    <!-- UserFavoritesFragment -->
    <string name="text_search_hint">Título</string>
    <string name="text_title_user_favorites">Películas favoritas</string>

    <!-- Asset Descriptions -->
    <string name="icon_description">Ícono de aplicación</string>

    <!-- Android -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>