<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ToggleButton
            android:id="@+id/toggleAddToFavorites"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/tbtn_favorite_state_change"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textOff=""
            android:textOn="" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMovieDetailsSnapshot"
                android:layout_width="match_parent"
                android:layout_height="470dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                android:background="@drawable/img_snapshot_not_available"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/tvMovieDetailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/title_movie_details"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:fadingEdge="horizontal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/life_savers_bold"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/ivMovieGrade"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/icon_description"/>


                <TextView
                    android:id="@+id/tvMovieGradeDetails"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="2dp"
                    android:layout_weight="3"
                    android:text="@string/text_dummy_grade"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    android:padding="2dp"
                    android:layout_weight="1"
                    android:text="@string/text_subtitle_language"/>

                <TextView
                    android:id="@+id/tvMovieDetailsLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="2dp"
                    android:layout_weight="1"
                    android:text="@string/text_dummy_language"/>

            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:padding="2dp"
                android:textStyle="bold"
                android:text="@string/text_subtitle_overview"/>

            <TextView
                android:id="@+id/tvMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:padding="2dp"
                android:textStyle="italic"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>