<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScrollMovies"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tvUserFavoritesTitle"
            android:layout_width="349dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_title_user_favorites"
            android:textColor="@color/black"
            android:fontFamily="@font/life_savers_bold"
            android:textSize="35sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSearchBarContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/dark_gray"
            app:layout_constraintCircleRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserFavoritesTitle">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/white"
                android:imeOptions="actionDone"
                android:textSize="15sp"
                android:ems="10"
                android:hint="@string/text_search_hint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/llSearchContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />


            <LinearLayout
                android:id="@+id/llSearchContainer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/etSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etSearch"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_search_white"
                    android:contentDescription="@string/icon_description" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFavoriteMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>